@@ -1,5 +1,6 @@
 2013-02-19  Kai Tietz  <ktietz@redhat.com>
 
+	* msidefs.h: Add enumerators additions for _WIN32_MSI 400, and 450.
 	* msi.h: Add features for _WIN32_MSI 400, and 450.
 
 2013-01-08  Jean-Baptiste Kempf  <jb@videolan.org>
